infra/thmanyah/db/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: db-ns
spec:
  selector:
    app: db
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
  type: ClusterIP
